# Trajectoy_Controller

./: README.md  README_NEW.md  evaluate_tracking.py  package.xml  setup.cfg  setup.py
control_car/: __init__.py  dummy_car_sim.py  dummy_tracked_objects.py  pure_persuit_node.py  pure_persuit_node_backup.py
launch/: pure_persuit.launch.py  system.launch.py
test/: conftest.py  test_pure_pursuit.py
